[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "firefly"
description = "Foundational image reconstruction engine following light physics"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "torch>=2.4.1",
    "torchvision",
    "tqdm",
    "diffusers==0.32.2",
    "accelerate==1.4.0",
    "transformers==4.49.0",
    "sentencepiece==0.2.0",
    "pty-chi@git+https://github.com/AdvancedPhotonSource/pty-chi.git",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["firefly"]

[docs]
dependencies = [
    "sphinx",
    "sphinx-rtd-theme",
]
