[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aether"
description = "AI-enhanced technique for high-quality reconstruction"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "torch>=2.4.1",
    "torchvision",
    "tqdm",
    "diffusers==0.32.2",
    "accelerate==1.4.0",
    "transformers==4.49.0",
    "sentencepiece==0.2.0",
    "ptychi@git+https://github.com/AdvancedPhotonSource/pty-chi.git@d165f787b0f69c879332f7e8a2788ad992c1b912",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["aether"]

[docs]
dependencies = [
    "sphinx",
    "sphinx-rtd-theme",
]
